remove format and change the type
